[package]
authors = ["Russ Brooks <me@russbrooks.com>"]
name = "sayso"
version = "0.0.1"
edition = "2018"
license = "Unlicense OR MIT"

homepage = "https://github.com/iq9/say-so-backend-rocket"
repository = "https://github.com/iq9/say-so-backend-rocket"
documentation = "https://github.com/iq9/say-so-backend-rocket"

description = """
Foundational Rust-on-Rocket backend REST MicroService: full CRUD, Auth (JWT), good patterns, etc.
"""
readme = "README.md"
keywords = ["demo", "web", "rocket"]
categories = ["web-programming"]

[badges]
# travis-ci = { repository = "iq9/say-so-backend-rust-rocket" }

[dependencies]
rocket = { version = "0.4.2", default-features = false }
rocket_cors = { version = "0.5.1", default-features = false }
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
rust-crypto = "0.2.36"
chrono = { version = "0.4.10", features = ["serde"] }
diesel = { version = "1.4.3", features = ["postgres", "chrono"] }
validator = "0.10.0"
validator_derive = "0.10.0"
slug = "0.1.4"
rand = "0.7.2"
dotenv = "0.15.0"
jsonwebtoken = "6.0.1"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_postgres_pool"]

[dev-dependencies]
once_cell = "1.2.0"

[features]
default = ["random-suffix"]

# Enable generation of random suffix when making article slug. This
# allows having multiple articles with the same title.
random-suffix = []
